remove deprecated code